# ros2practice

./: .gitignore  LICENSE  README.md
pluginlib_example/: readme.txt
pluginlib_example/dev_ws/src/polygon_base/: package.xml
pluginlib_example/dev_ws/src/polygon_base/include/polygon_base/: regular_polygon.hpp
pluginlib_example/dev_ws/src/polygon_base/src/: area_node.cpp
pluginlib_example/dev_ws/src/polygon_plugins/: CMakeLists.txt  package.xml
pluginlib_example/dev_ws/src/polygon_plugins/src/: polygon_plugins.cpp
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: lc_bringup_launch.py
src/bringup/params/: default_param.yaml  launch_nodes.yaml
src/bringup/pycommon/: __init__.py  launch_tools.py  rewritten_yaml.py
src/debuger/: CMakeLists.txt  package.xml
src/debuger/src/: debuger.cpp
src/fighting/: CMakeLists.txt  package.xml  plugins.xml
src/fighting/src/: tank_99a.cpp  tank_a.cpp
src/fire/: CMakeLists.txt  README.md  package.xml
src/fire/launch/: tank_fire.py
src/fire/params/: node.yaml
src/manager/: CMakeLists.txt  package.xml
src/manager/src/: dockertest.cpp  manager.cpp
src/protocol/: CMakeLists.txt  package.xml
src/protocol/action/: Contact.action
src/protocol/msg/: TankActive.msg  Test.msg
src/protocol/src/: protocol.cpp
src/protocol/srv/: Probe.srv
src/state/: CMakeLists.txt  package.xml
src/state/include/state/: base.hpp
src/state/src/: state_a.cpp  state_b.cpp
src/tank/: CMakeLists.txt  package.xml
src/tank/include/tank/: tank_base.hpp
src/tank/src/: tank.cpp
src/test/: CMakeLists.txt  package.xml
src/test/src/: publisher.cpp
src/utils/: CMakeLists.txt  package.xml
src/utils/include/utils/: backtrace.h
src/window/: package.xml  setup.cfg  setup.py
src/window/window/: window.py
